test/parser.d/invalid/pragma4.surc.bad
import directovis

{^; ;^} ; cannot be empty
main() = do
	x <- 42 ; a comment
	print x ;}
